[gd_scene load_steps=9 format=3 uid="uid://b6nasoc2xm7yq"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_ek5x3"]
[ext_resource type="Texture2D" uid="uid://duhi0mcqqct17" path="res://Assets/Menu/SKY.png" id="2_wi1je"]
[ext_resource type="Texture2D" uid="uid://b0yrcvublky61" path="res://Assets/Menu/BUILDINGS.png" id="3_67qqv"]
[ext_resource type="Texture2D" uid="uid://bxsn068gjqtlp" path="res://Assets/Menu/Title.png" id="4_jcs6e"]
[ext_resource type="Theme" uid="uid://crtm2m3sw3yoa" path="res://Assets/Theme/Default.tres" id="4_xrl2i"]
[ext_resource type="AudioStream" uid="uid://b8lh0bl74s8i8" path="res://Assets/Sound/Music/Menu.mp3" id="6_1tbn7"]
[ext_resource type="Texture2D" uid="uid://c1jeheo6lbgu8" path="res://Assets/Theme/settings.png" id="7_dxp32"]
[ext_resource type="FontFile" uid="uid://da6x4se2ncqfu" path="res://Assets/Theme/Better VCR 9.0.1.ttf" id="8_lxfnw"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ek5x3")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1560.0
offset_top = -771.0
offset_right = 1493.0
offset_bottom = 948.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="Sky" type="Sprite2D" parent="TextureRect"]
position = Vector2(1514, 862)
scale = Vector2(1, 0.998773)
texture = ExtResource("2_wi1je")

[node name="Buildings" type="Sprite2D" parent="TextureRect"]
position = Vector2(1523, 857)
texture = ExtResource("3_67qqv")

[node name="Title" type="Sprite2D" parent="TextureRect"]
position = Vector2(1594, 612)
scale = Vector2(2, 2)
texture = ExtResource("4_jcs6e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -369.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_xrl2i")
alignment = 1

[node name="New GameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "New Game"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../New GameButton")
text = "Quit"

[node name="Menu Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1tbn7")
autoplay = true
bus = &"Music"

[node name="SettingsMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0, 0.329412, 0.898039)

[node name="MarginContainer2" type="MarginContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 400
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 400

[node name="TextureRect" type="TextureRect" parent="SettingsMenu/MarginContainer2"]
layout_mode = 2
texture = ExtResource("7_dxp32")

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/MarginContainer2/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 24

[node name="Music" type="Label" parent="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_lxfnw")
text = "Music "

[node name="Music Slider" type="HSlider" parent="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("4_xrl2i")
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX" type="Label" parent="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_lxfnw")
text = "SFX"

[node name="SFX Slider" type="HSlider" parent="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("4_xrl2i")
max_value = 1.0
step = 0.05
value = 1.0

[node name="Button" type="Button" parent="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("4_xrl2i")
text = "  Close  "
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/New GameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer/GridContainer/Music Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer/GridContainer/SFX Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="SettingsMenu/MarginContainer2/MarginContainer/VBoxContainer/GridContainer/Button" to="." method="_on_button_pressed"]
